--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     
     <h1>Hello World!</h1>
+    <div><img src="img_hellow_world.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
     <P>This is the first file in my new Git Repo.</p>
     <p>A new line in our file!</p>
     
